--- a/templates/style.css
+++ b/templates/style.css
@@ -64,3 +64,8 @@ button {
 button:hover {
     background-color: #4a607e;
 }
+
+#shortUrlOutput {
+    font-weight: bolder;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
