Added configuration through CLI-flags

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>V URL Shortener</title>
+        <title>VURLS</title>
         <link rel="stylesheet" href="/style.css">
     </head>
 
     <body>
 
-        <div class="top-bar">V URL shortener</div>
+        <div class="top-bar">VURLS (V URL shortener)</div>
 
         <div class="floating-window">
             <h2>Shorten Your URL</h2>
