Funcioning password input in frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                     <input type="text" placeholder="Custom Alias (optional)">
                 </div>
                 <div class="input-group" @{hidden_value}>
-                    <input type="password" placeholder="Password">
+                    <input type="password" id="passwordInput" placeholder="Password">
                 </div>
                 <button type="submit">Shorten</button>
             </form>
