Added privacy policy

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,8 @@
             <a id="shortUrlOutput"></a>
         </div>
 
+        <a id="privacyPolicy" href="/privacy-policy.txt">Privacy Policy</a>
+
         <script src="/script.js"></script>
     </body>
 </html>
